--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ember-source-channel-url": "^3.0.0",
     "ember-template-lint": "^4.8.0",
     "ember-try": "^2.0.0",
+    "ember-window-mock": "^1.0.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ember": "^10.6.1",
